--- a/README
+++ b/README
@@ -36,3 +36,11 @@ License
 
 Patchwork is distributed under the MIT License. Use it for whatever you like.
 Doctrine 1.2.2 is published under the LGPL, http://www.doctrine-project.org.
+PHPIDS ...
+ZEND ...
+
+Read more
+=========
+
+PHING
+http://technosophos.com/category/tags/phing
